<resources>
    <string name="empty_string" />
    <string name="google">Google</string>
    <string name="apple">Apple</string>
    <string name="email">Email</string>
    <string name="skip">Skip</string>
    <string name="progress">progress</string>
    <string name="app_name">OnlineLearning</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="get_started">Get Started</string>
    <string name="sign_in_title">Let’s Sign In</string>
    <string name="sign_up_title">Let’s Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="dont_have_an_account_sign_up">Don’t have an account? Sign Up</string>
    <string name="dont_have_an_account_sign_in">Don’t have an account? Sign In</string>
    <string name="welcome_back">Welcome \nBack!</string>
    <string name="create_account">Create \nAccount!</string>
    <string name="or_continue_with">or continue with</string>
    <string name="all_fields_required">All fields required</string>
    <string name="name_error">Enter proper name</string>
    <string name="password_error">Enter proper password</string>
    <string name="email_error">Enter proper email</string>
    <string name="otp_screen_title">Enter the code we sent your registered mail</string>
    <string name="didnt_receive_a_code">Didn\'t receive a code? Resend Code</string>
    <string name="confirm">Confirm</string>
    <string name="verification_title">Verification Code</string>
    <string name="forgot_password_title_text">We need your registration email to send you password reset code!</string>
    <string name="send_code">Send Code</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="send_code_success">Send code success</string>
    <string name="reset_password_title_text">Enter a new password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_password_success">Reset Password Success</string>
    <string name="reset_password_title">Reset Password</string>
    <string name="home">Home</string>
    <string name="user_greet">Hey, Kawsar</string>
    <string name="lets_start_learning">Let’s Start Learning!</string>
    <string name="search_query_hint">Search anything</string>
    <string name="ongoing_course">Ongoing Course</string>
    <string name="view_all">View All</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ongoing_course_title">Foundations of Google UX UI Design</string>
    <string name="number_of_shits">30 Shit</string>
    <string name="total_lessons">64 Lesson</string>
    <string name="completed_lessons">43 Lesson</string>
    <string name="number_of_videos">64 Videos</string>
    <string name="number_of_quiz">80 Quiz</string>
    <string name="choice_your_courses">Choice your courses</string>
    <string name="all">All</string>
    <string name="popular">Popular</string>
    <string name="ux_ui_design">UX UI Design</string>
    <string name="number_of_lesson">64 Lesson</string>
    <string name="number_of_enrolls">100+ Enrolled</string>
    <string name="profile">Profile</string>
    <string name="txt_kawsar_ahmed">Kawsar Ahmed</string>
    <string name="txt_user_email">kawsarui.ux@gmail.com</string>
    <string name="txt_courses">15 Courses</string>
    <string name="txt_hours">23 Hours</string>
    <string name="txt_reviews">4.9 Reviews</string>
    <string name="login_failure">Login unsuccessful</string>
    <string name="signup_failure">SignUp unsuccessful</string>
    <string name="ok">OK</string>
    <string name="dialogTitle">Error!</string>
</resources>