<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignUpActivity">

    <include
        android:id="@+id/customToolbar"
        layout="@layout/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/customToolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/baseScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvWelcomeBack"
                style="@style/mediumTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:text="@string/create_account"
                android:textSize="@dimen/_20ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etName"
                style="@style/baseEditText"
                android:layout_width="0dp"
                android:layout_marginTop="@dimen/_37sdp"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="@id/tvWelcomeBack"
                app:layout_constraintStart_toStartOf="@id/tvWelcomeBack"
                app:layout_constraintTop_toBottomOf="@id/tvWelcomeBack" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etEmail"
                style="@style/baseEditText"
                android:layout_width="0dp"
                android:layout_marginTop="@dimen/_16sdp"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="@id/tvWelcomeBack"
                app:layout_constraintStart_toStartOf="@id/tvWelcomeBack"
                app:layout_constraintTop_toBottomOf="@id/etName" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPassword"
                style="@style/baseEditText"
                android:layout_width="0dp"
                android:layout_marginTop="@dimen/_16sdp"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@id/tvWelcomeBack"
                app:layout_constraintStart_toStartOf="@id/tvWelcomeBack"
                app:layout_constraintTop_toBottomOf="@id/etEmail" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgPasswordToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:background="@drawable/ic_hide_password"
                app:layout_constraintBottom_toBottomOf="@id/etPassword"
                app:layout_constraintEnd_toEndOf="@id/etPassword"
                app:layout_constraintTop_toTopOf="@id/etPassword" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/defaultProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignUp"
                style="@style/defaultButton"
                android:layout_width="0dp"
                android:layout_marginTop="@dimen/_26sdp"
                android:text="@string/sign_up"
                app:layout_constraintEnd_toEndOf="@id/tvWelcomeBack"
                app:layout_constraintStart_toStartOf="@id/tvWelcomeBack"
                app:layout_constraintTop_toBottomOf="@id/etPassword" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSignIn"
                style="@style/regularTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center"
                android:text="@string/dont_have_an_account_sign_in"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintTop_toBottomOf="@id/btnSignUp" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@color/darkBlueTextColor"
                app:layout_constraintBottom_toBottomOf="@id/tvContinue"
                app:layout_constraintEnd_toStartOf="@id/tvContinue"
                app:layout_constraintStart_toStartOf="@id/tvWelcomeBack"
                app:layout_constraintTop_toTopOf="@id/tvContinue" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvContinue"
                style="@style/regularTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_69sdp"
                android:gravity="center"
                android:text="@string/or_continue_with"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSignIn" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@color/darkBlueTextColor"
                app:layout_constraintBottom_toBottomOf="@id/tvContinue"
                app:layout_constraintEnd_toEndOf="@id/tvWelcomeBack"
                app:layout_constraintStart_toEndOf="@id/tvContinue"
                app:layout_constraintTop_toTopOf="@id/tvContinue" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnGoogle"
                style="@style/grayButton"
                android:layout_width="0dp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:drawableStart="@drawable/ic_google_logo"
                android:drawablePadding="@dimen/_10sdp"
                android:text="@string/google"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnApple"
                app:layout_constraintStart_toStartOf="@id/tvWelcomeBack"
                app:layout_constraintTop_toBottomOf="@id/tvContinue" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnApple"
                style="@style/grayButton"
                android:layout_width="0dp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:drawableStart="@drawable/ic_apple_logo"
                android:drawablePadding="@dimen/_10sdp"
                android:text="@string/apple"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/tvWelcomeBack"
                app:layout_constraintStart_toEndOf="@id/btnGoogle"
                app:layout_constraintTop_toBottomOf="@id/tvContinue" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>