<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_200sdp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_20sdp"
    android:layout_marginEnd="@dimen/_10sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clCurrentItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgBackground"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgGoogle"
            android:layout_width="@dimen/_34sdp"
            android:layout_height="@dimen/_34sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/ic_google"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCourseTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/ongoing_course_title"
            android:textColor="@color/white"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imgGoogle"
            app:layout_constraintTop_toTopOf="@id/imgGoogle" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgProgress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_9sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:src="@drawable/ic_seekbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgGoogle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCompletedLessons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:alpha="0.7"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/completed_lessons"
            android:textColor="@color/white"
            android:textSize="@dimen/_8ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgProgress" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTotalLessons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12sdp"
            android:alpha="0.7"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/total_lessons"
            android:textColor="@color/white"
            android:textSize="@dimen/_8ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgProgress" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNumberOfShits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_9sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/number_of_shits"
            android:textColor="@color/white"
            android:textSize="@dimen/_9ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/_9sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCompletedLessons" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNumberOfVideos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/number_of_videos"
            android:textColor="@color/white"
            android:textSize="@dimen/_9ssp"
            app:layout_constraintEnd_toStartOf="@id/tvNumberOfShits"
            app:layout_constraintTop_toBottomOf="@id/tvCompletedLessons"
            app:layout_constraintTop_toTopOf="@id/tvNumberOfShits" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNumberOfQuiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/number_of_quiz"
            android:textColor="@color/white"
            android:textSize="@dimen/_9ssp"
            app:layout_constraintStart_toEndOf="@id/tvNumberOfShits"
            app:layout_constraintTop_toBottomOf="@id/tvCompletedLessons"
            app:layout_constraintTop_toTopOf="@id/tvNumberOfShits" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>