<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_116sdp"
    android:layout_height="wrap_content"
    android:elevation="@dimen/_5sdp"
    android:layout_marginTop="@dimen/_5sdp"
    android:layout_marginBottom="@dimen/_10sdp"
    app:cardCornerRadius="@dimen/_10sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgBackground"
            android:layout_width="0dp"
            android:layout_height="@dimen/_73sdp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_choice_course"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvUXUIDesign"
            style="@style/regularTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_7sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:text="@string/ux_ui_design"
            android:textSize="@dimen/_8ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgBackground" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgRating"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="center"
            android:src="@drawable/ic_rating"
            app:layout_constraintBottom_toBottomOf="@id/tvUXUIDesign"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvUXUIDesign"
            app:layout_constraintTop_toTopOf="@id/tvUXUIDesign" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNumberOfLessons"
            style="@style/regularTextViewLightGray"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_7sdp"
            android:text="@string/number_of_lesson"
            android:textSize="@dimen/_5ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvUXUIDesign"
            app:layout_constraintTop_toBottomOf="@id/tvUXUIDesign" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNumberOfEnrolls"
            style="@style/regularTextViewLightGray"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14sdp"
            android:layout_marginBottom="@dimen/_7sdp"
            android:text="@string/number_of_enrolls"
            android:textSize="@dimen/_5ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvUXUIDesign" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>